Lot of fixes