@@ -14,36 +14,34 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 
 import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_DIMENSION;
 
 /**
  * Class for an expedition instance.
  */
-public class Expedition implements IExpedition
+public final class Expedition implements IExpedition
 {
     /**
      * Nbt tag constants.
      */
+    private static final String TAG_EQUIPMENT   = "equipment";
     private static final String TAG_MEMBERS     = "members";
     private static final String TAG_MEMBER_TYPE = "memberType";
-    private static final String TAG_EQUIPMENT   = "equipment";
 
     /**
      * The dimension to send the expedition to.
      */
+    @NotNull
     private final ResourceKey<Level> dimensionId;
 
     /**
-     * The results of this expedition.
+     * The equipment given to the expedition prior to starting.
      */
-    private final List<IExpeditionStage> results = new ArrayList<>(List.of(new ExpeditionStage()));
+    @NotNull
+    private final List<ItemStack> equipment;
 
     /**
      * The members of the expedition.
@@ -52,24 +50,23 @@ public class Expedition implements IExpedition
     private final List<IExpeditionMember> members;
 
     /**
-     * The list of items to give to the expedition members.
+     * The results of this expedition.
      */
-    @NotNull
-    private final List<ItemStack> equipment;
+    private final Deque<IExpeditionStage> results = new ArrayDeque<>(List.of(new ExpeditionStage()));
 
     /**
      * The stage of the expedition.
      */
-    private ExpeditionStatus stage = ExpeditionStatus.CREATED;
+    private ExpeditionStatus status = ExpeditionStatus.CREATED;
 
     /**
      * Internal constructor.
      */
-    private Expedition(final ResourceKey<Level> dimensionId, final @NotNull List<IExpeditionMember> members, final @NotNull List<ItemStack> equipment)
+    public Expedition(final @NotNull ResourceKey<Level> dimensionId, final @NotNull List<ItemStack> equipment, final @NotNull List<IExpeditionMember> members)
     {
         this.dimensionId = dimensionId;
-        this.members = members;
         this.equipment = equipment;
+        this.members = members;
     }
 
     /**
@@ -78,7 +75,7 @@ public class Expedition implements IExpedition
      * @param compound the compound data.
      * @return the expedition instance.
      */
-    public static Expedition of(final CompoundTag compound)
+    public static Expedition loadFromNBT(final CompoundTag compound)
     {
         return Serializer.read(compound);
     }
@@ -92,13 +89,13 @@ public class Expedition implements IExpedition
     @Override
     public ExpeditionStatus getStatus()
     {
-        return this.stage;
+        return this.status;
     }
 
     @Override
     public void setStatus(final ExpeditionStatus stage)
     {
-        this.stage = stage;
+        this.status = stage;
     }
 
     @Override
@@ -109,23 +106,21 @@ public class Expedition implements IExpedition
     }
 
     @Override
+    public List<ItemStack> getEquipment()
+    {
+        return equipment;
+    }
+
+    @Override
     public @NotNull List<IExpeditionMember> getActiveMembers()
     {
         return this.members.stream().filter(f -> !f.isDead()).toList();
     }
 
     @Override
-    @NotNull
-    public List<ItemStack> getEquipment()
+    public @NotNull Collection<IExpeditionStage> getResults()
     {
-        return this.equipment;
-    }
-
-    @Override
-    @Nullable
-    public List<IExpeditionStage> getResults()
-    {
-        return Collections.unmodifiableList(this.results);
+        return Collections.unmodifiableCollection(this.results);
     }
 
     @Override
@@ -137,19 +132,19 @@ public class Expedition implements IExpedition
     @Override
     public void rewardFound(final ItemStack itemStack)
     {
-        this.results.get(this.results.size() - 1).addReward(itemStack);
+        this.results.getLast().addReward(itemStack);
     }
 
     @Override
     public void mobKilled(final EntityType<?> type)
     {
-        this.results.get(this.results.size() - 1).rewardFound(type);
+        this.results.getLast().rewardFound(type);
     }
 
     @Override
     public void memberLost(final IExpeditionMember member)
     {
-        this.results.get(this.results.size() - 1).memberLost(member);
+        this.results.getLast().memberLost(member);
         member.died();
     }
 
@@ -157,57 +152,6 @@ public class Expedition implements IExpedition
     public void write(final CompoundTag compound)
     {
         Serializer.write(this, compound);
-    }
-
-    /**
-     * Builder for an expedition.
-     */
-    public static class Builder
-    {
-        /**
-         * The level to send the expedition to.
-         */
-        private final ResourceKey<Level> dimensionId;
-
-        /**
-         * The list of items to give to the expedition members.
-         */
-        private final List<ItemStack> equipment = new ArrayList<>();
-
-        /**
-         * The members of the expedition.
-         */
-        private final List<IExpeditionMember> members = new ArrayList<>();
-
-        /**
-         * Default constructor.
-         */
-        public Builder(final ResourceKey<Level> dimensionId)
-        {
-            this.dimensionId = dimensionId;
-        }
-
-        /**
-         * Add additional members to this expedition.
-         *
-         * @param member the new member.
-         * @return the builder for chaining.
-         */
-        public Builder addMembers(final IExpeditionMember member)
-        {
-            this.members.add(member);
-            return this;
-        }
-
-        /**
-         * Finalizes creation of the expedition instance.
-         *
-         * @return the created expedition.
-         */
-        public Expedition build()
-        {
-            return new Expedition(dimensionId, members, equipment);
-        }
     }
 
     /**
@@ -248,7 +192,7 @@ public class Expedition implements IExpedition
                 equipment.add(ItemStack.of(equipmentList.getCompound(i)));
             }
 
-            return new Expedition(dimensionId, members, equipment);
+            return new Expedition(dimensionId, equipment, members);
         }
 
         /**
@@ -259,10 +203,10 @@ public class Expedition implements IExpedition
          */
         public static void write(final Expedition expedition, final CompoundTag compound)
         {
-            compound.putString(TAG_DIMENSION, expedition.dimensionId.location().toString());
+            compound.putString(TAG_DIMENSION, expedition.getTargetDimension().location().toString());
 
             final ListTag memberTag = new ListTag();
-            for (final IExpeditionMember member : expedition.members)
+            for (final IExpeditionMember member : expedition.getMembers())
             {
                 final CompoundTag memberCompound = new CompoundTag();
                 if (member instanceof ExpeditionCitizenMember)
